--- a/.gitconfig
+++ b/.gitconfig
@@ -11,9 +11,10 @@
   defaultBranch = master
 [alias]
   s = status
+  c = !git-cz c
   co = checkout
   cob = checkout -b
-  del = branch -D    
+  del = branch -D
   br = branch --format='%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]' --sort=-committerdate
   save = !git add -A && git commit -m 'chore: savepoint'
   undo = reset HEAD~1 --mixed
