feat: add spacevim config

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule ".config/spacevim"]
-	path = .config/spacevim
-	url = https://spacevim.org/git/repos/SpaceVim/
-[submodule "/home/ddanchev/.SpaceVim"]
-	path = /home/ddanchev/.SpaceVim
+[submodule ".SpaceVim"]
+	path = .SpaceVim
 	url = https://spacevim.org/git/repos/SpaceVim/
